# bcat

./: Cargo.toml  README.md
.github/workflows/: static-build.yml
src/: main.rs
tests/: cli_tests.rs
tests/cli_tests_expected/: dir_arg_stdout.txt  help_stdout.txt  noargs_stderr.txt
tests/examples/: b_file.txt
