[package]
version = "0.1.4"
name = "bcat"
authors = ["bootjp / Yoshiaki Ueda <contact@bootjp.me>"]
edition = "2018"
license = "Apache-2.0"
description = "A command-line tool that allows transparent ls and cat operations regardless of whether they are files or directories."
repository = "https://github.com/bootjp/bcat"
documentation = "https://github.com/bootjp/bcat/blob/main/README.md"
readme = "README.md"
exclude = [
    ".github/*",
    ".doc/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
command = "0.0.0"
context = "3.0.0"
env_logger = "0.10.0"
filesize = "0.2.0"
filetime = "0.2.20"
fs = "0.0.5"
humansize = "2.1.3"
io = "0.0.2"
libc = "0.2.141"
pretty-bytes = "0.2.2"
prettytable-rs = "0.10.0"
result = "1.0.0"
structopt = "0.3.26"
unix_mode = "0.1.3"
use = "0.0.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.10"
ctor = "0.2.0"
